Kielikäännökset. Arviointi-näkymä

--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -1,6 +1,6 @@
 <div class="panel panel-primary">
   <div class="panel-heading">
-    <h3 class="panel-title">Arvioi osaamisesi - {{ tutkinto | lokalisoiKentta:'nimi' }}</h3>
+    <h3 class="panel-title">{{ 'arviointi.arvioi_osaamisesi' | translate }} - {{ tutkinto | lokalisoiKentta:'nimi' }}</h3>
   </div>
   <div class="panel-body">
     <h2>{{ tutkinnonosatById[tutkinnonosa] | lokalisoiKentta:'nimi' }}</h2>
@@ -15,25 +15,25 @@
             <label ng-repeat="vaihtoehto in [1,2,3,4]" style="display: block;" ng-class="{checked: arviot[kohde.arvioinninkohde_id].arvio == vaihtoehto}">
               <input type="radio" ng-model="arviot[kohde.arvioinninkohde_id].arvio" ng-value="vaihtoehto">
               {{ vaihtoehto }}
-              <span class="asteikkoteksti">{{ 'arvointi.asteikko'+vaihtoehto | translate }}</span>
+              <span class="asteikkoteksti">{{ 'arviointi.asteikko'+vaihtoehto | translate }}</span>
             </label>
           </div>
           <div class="valinnat-container muut">
             <label style="display: block;" class="eos" ng-class="{checked: arviot[kohde.arvioinninkohde_id].arvio === null}">
               <input type="radio" ng-model="arviot[kohde.arvioinninkohde_id].arvio" ng-value="null" />
-              En osaa sanoa
+              {{ 'arviointi.eos' | translate }}
             </label>
 
             <label style="display: block" class="vapaateksti-toggle" ng-class="{checked: vapaateksti_auki}" ng-click="">
               <input type="checkbox" ng-model="vapaateksti_auki" name="vapaateksti" ng-click="" ng-checked="arviot[kohde.arvioinninkohde_id].vapaateksti" ng-init="vapaateksti_auki = arviot[kohde.arvioinninkohde_id].vapaateksti.length > 0" />
               <span class="glyphicon glyphicon-pencil"></span>
-              <span class="asteikkoteksti">Tekstivastaus</span>
+              <span class="asteikkoteksti">{{ 'arviointi.tekstivastaus' | translate }}</span>
             </label>
           </div>
         </div>
         <div class="row">
           <div class="reveal-animation col-md-5 vapaatekstivastaus" ng-if="vapaateksti_auki">
-            <textarea ng-model="arviot[kohde.arvioinninkohde_id].vapaateksti" ng-model-options="{debounce: 200}" placeholder="Kirjoita vastauksesi tähän" rows="4" class="form-control"></textarea>
+            <textarea ng-model="arviot[kohde.arvioinninkohde_id].vapaateksti" ng-model-options="{debounce: 200}" placeholder="{{ 'arviointi.tekstivastaus_placeholder' | translate }}" rows="4" class="form-control"></textarea>
           </div>
         </div>
       </section>
@@ -46,26 +46,26 @@
 
         <div ng-if="seuraavaTutkinnonosa() !== undefined" class="pull-right text-right">
           <button class="btn btn-primary pull-right" role="button" ng-click="avaaSeuraavaOsa()">
-            Arvioi osaaminen&nbsp;
+            {{ 'tutkinto_osa.arvioi' | translate}}&nbsp;
             <span class="glyphicon glyphicon-arrow-right" aria-hidden="true"></span>
           </button>
           <div><small>{{ tutkinnonosatById[seuraavaTutkinnonosa()] | lokalisoiKentta:'nimi' }}</small></div>
         </div>
 
         <button class="btn btn-primary pull-right" role="button" ng-if="seuraavaTutkinnonosa() === undefined" ng-click="siirryRaporttiin()">
-          Näytä raportti&nbsp;
+          {{ 'arviointi.raportti' | translate}}&nbsp;
           <span class="glyphicon glyphicon-stats" aria-hidden="true"></span>
         </button>
 
         <button class="btn btn-primary pull-left" role="button" ng-if="edellinenTutkinnonosa() === undefined" ng-click="palaaOsienValintaan()">
           <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
-          Valitse tutkinnon osat
+          {{ 'arviointi.valitse_osa' | translate}}
         </button>
 
         <div ng-if="edellinenTutkinnonosa() !== undefined" class="pull-left text-left">
           <button class="btn btn-primary pull-left" role="button" ng-click="avaaEdellinenOsa()">
             <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
-            Arvioi osaaminen&nbsp;
+            {{ 'tutkinto_osa.arvioi' | translate}}&nbsp;
           </button>
           <div><small>{{ tutkinnonosatById[edellinenTutkinnonosa()] | lokalisoiKentta:'nimi' }}</small></div>
         </div>
