OPH-1351 linkki koulutustarjontaan tutkinnon nimellä.

--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -6,5 +6,9 @@
   <a href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" target="blank">
     <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
     {{ 'tutkinto.nayttotutkintojenjarjestajat_linkki' | translate }}
-  </a>
+  </a><br />
+  <a href="https://opintopolku.fi/app/#!/haku/*?page=1&articlePage=1&organisationPage=1&langCleared&itemsPerPage=25&sortCriteria=0&educationCodeFilter={{tutkintonimi}}&tab=los" target="blank">
+    {{ 'tutkinto.koulutustarjonta_linkki' | translate }}
+  </a><br />
+  
 </div>
