--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -6,7 +6,7 @@
 
     <h2>{{ tutkinto | lokalisoiKentta:'nimi' }}</h2>
 
-    <eperusteet-linkki kieli="{{kieli}}" eperustetunnus="{{tutkinto.peruste_eperustetunnus}}" eperustetyyppi="{{tutkinto.peruste_tyyppi}}" tutkintotunnus="{{tutkinto.tutkintotunnus}}"></eperusteet-linkki>
+    <eperusteet-linkki kieli="{{kieli}}" eperustetunnus="{{tutkinto.peruste_eperustetunnus}}" eperustetyyppi="{{tutkinto.peruste_tyyppi}}" tutkintotunnus="{{tutkinto.tutkintotunnus}}" tutkintonimi="{{ tutkinto | lokalisoiKentta:'nimi' }}"></eperusteet-linkki>
 
     <h3 ng-if="(tutkinnonosat | filter: {pakollinen: true}).length" translate="osien-valinta.pakolliset_osat"></h3>
     <div ng-repeat="osa in tutkinnonosat | filter: {pakollinen: true}" class="checkbox">
