--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -2,13 +2,13 @@
   <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/tiedot" target="blank">
     <span class="glyphicon bitmap icon-eperuste" aria-hidden="true"></span>
     {{ 'tutkinto.eperusteet_linkki' | translate }}
-  </a><br />
+  </a>
   <a ng-if="eperustetyyppi!='ops'" href="http://www.nayttotutkintohaku.fi/{{kieli}}/#/tutkinto/{{tutkintotunnus}}" target="blank">
     <span class="glyphicon bitmap icon-nayttotutkintohaku" aria-hidden="true"></span>
     {{ 'tutkinto.nayttotutkintojenjarjestajat_linkki' | translate }}
-  </a><br />
+  </a>
   <a href="https://opintopolku.fi/app/#!/haku/*?page=1&articlePage=1&organisationPage=1&langCleared&itemsPerPage=25&sortCriteria=0&educationCodeFilter={{tutkintonimi}}&tab=los" target="blank">
+    <span class="glyphicon bitmap icon-opintopolku" aria-hidden="true"></span>
     {{ 'tutkinto.koulutustarjonta_linkki' | translate }}
-  </a><br />
-  
+  </a>
 </div>
