OPH-1351: ePerusteet-linkin sivun voi määrittää direktiiviin

--- a/app/frontend/src/template/direktiivit/eperusteet-linkki.html
+++ b/app/frontend/src/template/direktiivit/eperusteet-linkki.html
@@ -1,5 +1,5 @@
 <div class="eperusteet">
-  <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/tiedot" target="blank">
+  <a href="https://eperusteet.opintopolku.fi/#/{{kieli}}/esitys/{{eperustetunnus}}/{{eperustetyyppi}}/{{eperustesivu}}" target="blank">
     <span class="glyphicon bitmap icon-eperuste" aria-hidden="true"></span>
     {{ 'tutkinto.eperusteet_linkki' | translate }}
   </a>
