OPH-1342: Muuta lokalisoitava teksti raporteissa

--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -16,7 +16,7 @@
         <table class="raportti table table-striped">
           <thead>
             <tr>
-              <th translate="raportti.arvioinnin_kohde"></th>
+              <th translate="raportti.ammattitaidon_kuvaus"></th>
               <th translate="raportti.arvio"></th>
               <th translate="raportti.kommentti"></th>
             </tr>
