OPH-1382: Lisää kaavio (kovakoodattu) raporttiin

--- a/app/frontend/src/sass/main.scss
+++ b/app/frontend/src/sass/main.scss
@@ -21,6 +21,7 @@
 @import "partials/_base";
 @import "partials/_typography";
 @import "partials/_components";
+@import "partials/_kaavio";
 
 /* NÄKYMÄT
 ------------------------------------------------------------------------------*/
