OPH-1382: Näytä päiväys ylimpänä

--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -7,7 +7,7 @@
     </h3>
   </div>
   <div class="panel-body">
-    {{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy' }}
+    <div>{{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy' }}</div>
 
     <kaavio jakauma="jakauma"></kaavio>
 
