OPH-1384: Lisää polku-direktiivi
Näyttää eri vaiheet ja aktivoi linkit kun vaihe on saatavilla.

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -1,3 +1,5 @@
+<polku></polku>
+
 <div class="panel panel-primary">
   <div class="panel-heading">
     <h3 class="panel-title">{{ 'tutkinto_osa.valitse' | translate }}</h3>
