OPH-1384: Lokalisoi polku-direktiivi

--- a/app/frontend/src/template/direktiivit/polku.html
+++ b/app/frontend/src/template/direktiivit/polku.html
@@ -2,22 +2,22 @@
   <div class="container-fluid" style="background-color: whitesmoke">
     <div class="row">
       <div class="col-md-2">
-        <a href="#/">Valitse tutkinto</a>
+        <a href="#/" translate="polku.valitse_tutkinto"></a>
       </div>
       <div class="col-md-1">&raquo;</div>
       <div class="col-md-2">
-        <a ng-if="tutkinto && peruste" ng-href="#/osien-valinta?tutkinto={{tutkinto}}&peruste={{peruste}}">Valitse tutkinnon osat</a>
-        <span ng-if="!tutkinto || !peruste">Valitse tutkinnon osat</span>
+        <a ng-if="tutkinto && peruste" ng-href="#/osien-valinta?tutkinto={{tutkinto}}&peruste={{peruste}}" translate="polku.valitse_tutkinnon_osat"></a>
+        <span ng-if="!tutkinto || !peruste" translate="polku.valitse_tutkinnon_osat"></span>
       </div>
       <div class="col-md-1">&raquo;</div>
       <div class="col-md-2">
-        <a ng-if="osatunnus" ng-href="#/osien-valinta/arviointi?osa={{osatunnus}}">Arvioi osaaminen</a>
-        <span ng-if="!osatunnus">Arvioi osaaminen</span>
+        <a ng-if="osatunnus" ng-href="#/osien-valinta/arviointi?osa={{osatunnus}}" translate="polku.arvioi_osaaminen"></a>
+        <span ng-if="!osatunnus" translate="polku.arvioi_osaaminen"></span>
       </div>
       <div class="col-md-1">&raquo;</div>
       <div class="col-md-2">
-        <a ng-if="arvioita" href="#/raportti">Raportti</a>
-        <span ng-if="!arvioita">Raportti</span>
+        <a ng-if="arvioita" href="#/raportti" translate="polku.raportti"></a>
+        <span ng-if="!arvioita" translate="polku.raportti"></span>
       </div>
     </div>
   </div>
