OPH-1384: Nimeä /osien-valinta/arviointi -> /arviointi
Mahdollista nyt kun ei käytetä vanhaa breadcrumb-toteutusta.

--- a/app/frontend/src/template/direktiivit/polku.html
+++ b/app/frontend/src/template/direktiivit/polku.html
@@ -11,7 +11,7 @@
       </div>
       <div class="col-md-1">&raquo;</div>
       <div class="col-md-2">
-        <a ng-if="osatunnus" ng-href="#/osien-valinta/arviointi?osa={{osatunnus}}" translate="polku.arvioi_osaaminen"></a>
+        <a ng-if="osatunnus" ng-href="#/arviointi?osa={{osatunnus}}" translate="polku.arvioi_osaaminen"></a>
         <span ng-if="!osatunnus" translate="polku.arvioi_osaaminen"></span>
       </div>
       <div class="col-md-1">&raquo;</div>
