OPH-1379: Varoitus jos arviointeja puuttuu

--- a/app/frontend/src/template/arviointi/arviointi.html
+++ b/app/frontend/src/template/arviointi/arviointi.html
@@ -41,6 +41,7 @@
       </section>
     </section>
 
+    <p ng-if="puuttuukoArvioita()" class="bg-danger" style="padding: 0.5em" translate="arviointi.arvioita_puuttuu"></p>
   </div>
   <div class="panel-footer">
     <div class="row">
