OPH-1382: Näytä tutkinnon osien nimet kaaviossa

--- a/app/frontend/src/sass/partials/_kaavio.scss
+++ b/app/frontend/src/sass/partials/_kaavio.scss
@@ -7,6 +7,11 @@
     fill: $lighter-primary;
   }
 
+  .kaavio-palkin-otsikko {
+    fill: $lighter-gray;
+    text-anchor: middle;
+  }
+
   .kaavio-viiva {
     stroke: $lighter-gray;
   }
