OPH-1347: Linkin ja taulukon tyylejä.

--- a/app/frontend/src/template/direktiivit/tallennus.html
+++ b/app/frontend/src/template/direktiivit/tallennus.html
@@ -5,7 +5,7 @@
 <div class="modal-body">
   <p translate="tallennus.teksti"></p>
 
-  <div>{{ linkki }}</div>
+  <strong>{{ linkki }}</strong>
 </div>
 
 <div class="modal-footer">
