--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -15,7 +15,7 @@
       <section class="kohdealue" ng-repeat="kohdealue in kohdealueet[tutkinnonosa.osatunnus]">
         <h3>{{ kohdealue | lokalisoiKentta:'nimi' }}</h3>
 
-        <table class="raportti table table-striped">
+        <table class="raportti table table-striped table-condensed">
           <thead>
             <tr>
               <th translate="raportti.ammattitaidon_kuvaus"></th>
