OPH-1385: Osien valinta: poista arviot -linkki

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -16,6 +16,7 @@
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
         {{ osa | lokalisoiKentta:'nimi' }}
       </label>
+      <span><a class="small" ng-if="onkoArvioita(osa.osatunnus)" ng-click="poistaArviot(osa.osatunnus)" translate="osien-valinta.poista_arviot"></a></span>
     </div>
 
     <h3 ng-if="(tutkinnonosat | filter: {pakollinen: false}).length" translate="osien-valinta.valinnaiset_osat"></h3>
