--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -25,6 +25,7 @@
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
         {{ osa | lokalisoiKentta:'nimi' }}
       </label>
+      <span><a class="small" ng-if="onkoArvioita(osa.osatunnus)" ng-click="poistaArviot(osa.osatunnus)" translate="osien-valinta.poista_arviot"></a></span>
     </div>
   </div>
   <div class="panel-footer">
