OPH-1385: "Poista arviot" poistaa kaikista valituista
Ei erillisiä linkkejä jokaiselle tutkinnonosalle.

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -16,7 +16,6 @@
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
         {{ osa | lokalisoiKentta:'nimi' }}
       </label>
-      <span><a class="small" ng-if="onkoArvioita(osa.osatunnus)" ng-click="poistaArviot(osa.osatunnus)" translate="osien-valinta.poista_arviot"></a></span>
     </div>
 
     <h3 ng-if="(tutkinnonosat | filter: {pakollinen: false}).length" translate="osien-valinta.valinnaiset_osat"></h3>
@@ -25,7 +24,11 @@
         <input type="checkbox" ng-model="valinnat[osa.osatunnus]">
         {{ osa | lokalisoiKentta:'nimi' }}
       </label>
-      <span><a class="small" ng-if="onkoArvioita(osa.osatunnus)" ng-click="poistaArviot(osa.osatunnus)" translate="osien-valinta.poista_arviot"></a></span>
+    </div>
+
+    <div class="bg-info" style="padding: 0.5em" ng-if="onkoArvioita()">
+      <span translate="osien-valinta.arvioita_on"></span>
+      <span><a class="small" ng-click="poistaArviot()" translate="osien-valinta.poista_arviot"></a></span>
     </div>
   </div>
   <div class="panel-footer">
