--- a/app/frontend/src/template/palvelut/varmistus.html
+++ b/app/frontend/src/template/palvelut/varmistus.html
@@ -1,5 +1,5 @@
 <div class="modal-header">
-  <h4>{{ otsikko }}</h4>
+  <h2 class="modal-title" >{{ otsikko }}</h2>
 </div>
 
 <div class="modal-body">
