--- a/app/frontend/src/template/direktiivit/polku.html
+++ b/app/frontend/src/template/direktiivit/polku.html
@@ -1,18 +1,20 @@
 <div class="row wizard">
-  <div class="col-md-3">
-    <a href="#/" translate="polku.valitse_tutkinto" class="btn btn-primary"></a>
-  </div>
-  <div class="col-md-3">
-    <a ng-if="tutkinto && peruste" ng-href="#/osien-valinta?tutkinto={{tutkinto}}&peruste={{peruste}}" translate="polku.valitse_tutkinnon_osat"></a>
-    <span ng-if="!tutkinto || !peruste" translate="polku.valitse_tutkinnon_osat"></span>
-  </div>
-  <div class="col-md-3">
-    <a ng-if="osatunnus" ng-href="#/arviointi?osa={{osatunnus}}" translate="polku.arvioi_osaaminen"></a>
-    <span ng-if="!osatunnus" translate="polku.arvioi_osaaminen"></span>
-  </div>
-  <div class="col-md-3">
-    <a ng-if="arvioita" href="#/raportti" translate="polku.raportti"></a>
-    <span ng-if="!arvioita" translate="polku.raportti"></span>
+  <div class="col-md-12">
+    <div class="wizard-item col-sm-3" ng-class="{active: path=='/'}">
+      <a href="#/" translate="polku.valitse_tutkinto"></a>
+    </div>
+    <div class="wizard-item col-sm-3" ng-class="{active: path=='/osien-valinta', enabled: tutkinto && peruste}">
+      <a ng-if="tutkinto && peruste" ng-href="#/osien-valinta?tutkinto={{tutkinto}}&peruste={{peruste}}" translate="polku.valitse_tutkinnon_osat"></a>
+      <span ng-if="!tutkinto || !peruste" translate="polku.valitse_tutkinnon_osat"></span>
+
+    </div>
+    <div class="wizard-item col-sm-3" ng-class="{active: path=='/arviointi'}">
+      <a ng-if="osatunnus" ng-href="#/arviointi?osa={{osatunnus}}" translate="polku.arvioi_osaaminen"></a>
+      <span ng-if="!osatunnus" translate="polku.arvioi_osaaminen"></span>
+    </div>
+    <div class="wizard-item col-sm-3" ng-class="{active: path=='/raportti'}">
+      <a ng-if="arvioita" href="#/raportti" translate="polku.raportti"></a>
+      <span ng-if="!arvioita" translate="polku.raportti"></span>
+    </div>
   </div>
 </div>
-<br />
