OPH-1388: Tallennusnappi myös raporttisivulle. Kielimuuttujia ym.

--- a/app/frontend/src/sass/partials/_base.scss
+++ b/app/frontend/src/sass/partials/_base.scss
@@ -66,6 +66,11 @@ footer {
   padding: 0 $marginM;
 }
 
+.lang-nav {
+  margin-bottom: 1em;
+  margin-top: .5em;
+}
+
 #turre-logo {
   width: 60px;
   height: 100%;
