--- a/app/frontend/src/sass/yhteiset/_buttons.scss
+++ b/app/frontend/src/sass/yhteiset/_buttons.scss
@@ -21,8 +21,8 @@ button:disabled {
 }
 
 .wizard {
-  margin-bottom: .5em;
   margin-bottom: 1em;
+  margin-top: 1em;
   .wizard-item {
     text-align: center;
     background-color: $lightest-gray;
