--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -43,6 +43,7 @@
           <span class="glyphicon glyphicon-arrow-left" aria-hidden="true"></span>&nbsp;
           {{ 'raportti.palaa_arviointiin' | translate }}
         </button>
+        <tallennus></tallennus>
       </div>
     </div>
   </div>
