OPH-1389: Näytä teksti linkin latauksen jälkeen

--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -1,3 +1,5 @@
+<div class="alert alert-info" ng-if="ladattu" translate="osien-valinta.arvio_ladattu"></div>
+
 <polku></polku>
 
 <div class="panel panel-primary">
