--- a/app/frontend/src/template/osien-valinta/osien-valinta.html
+++ b/app/frontend/src/template/osien-valinta/osien-valinta.html
@@ -1,4 +1,4 @@
-<div class="alert alert-info" ng-if="ladattu" translate="osien-valinta.arvio_ladattu"></div>
+<div class="alert alert-info" ng-if="ladattu" translate="osien-valinta.arvio_ladattu" translate-values="{luotuaika: (ladattu | date:'dd.MM.yyyy HH:mm:ss')}"></div>
 
 <polku></polku>
 
