--- a/app/frontend/src/template/raportti/raportti.html
+++ b/app/frontend/src/template/raportti/raportti.html
@@ -7,6 +7,32 @@
     </h3>
   </div>
   <div class="panel-body">
+    <div class="row">
+      <div class="pull-right">
+        <div class="btn-group">
+          <label class="btn btn-success" ng-model="valittuRaportti" btn-radio="'raportti'">Raportti</label>
+          <label class="btn btn-success" ng-model="valittuRaportti" btn-radio="'tekstiraportti'">Tekstiraportti</label>
+        </div>
+        <button class="btn btn-default"><span class="glyphicon glyphicon-download-alt"></span> Lataa tekstiraportti</button>
+      </div>
+
+    </div>
+    <div ng-if="valittuRaportti == 'tekstiraportti'">
+      <h2>Tekstiraportti</h2>
+
+      <div class="row">
+        <div class="pull-right">
+          <button class="btn btn-default"><span class="glyphicon glyphicon-copy"></span> Kopioi leikepöydälle</button>
+        </div>
+      </div>
+      <div class="col-md-12">
+        <div class="form-group">
+          <textarea class="form-control" ng-model="tekstiRaportti" style="height: 30em; font-family: monospace" readonly></textarea>
+        </div>
+      </div>
+    </div>
+    <div ng-if="valittuRaportti == 'raportti'">
+
     <div>{{ 'raportti.paivays' | translate }}: {{ paivays | date: 'dd.MM.yyyy' }}</div>
 
     <kaavio jakauma="jakauma"></kaavio>
@@ -35,6 +61,7 @@
         </table>
       </section>
     </section>
+    </div>
   </div>
   <div class="panel-footer">
     <div class="row">
